--- a/Week-3/public/index.html
+++ b/Week-3/public/index.html
@@ -15,28 +15,47 @@
 
     <nav>
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Logo</a>
+          <a href="#" class="brand-logo">Bob's Burgers</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="login.html">Login</a></li>
           </ul>
         </div>
       </nav>
 
-      <!-- Modal Trigger -->
-  <button id="button1" data-target="modal1" class="btn modal-trigger">Modal</button>
+      <div class="row">
 
-  <!-- Modal Structure -->
-    <div id="modal1" class="modal">
-        <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <div class="col s12 m4 l3"> <!-- Note that "m4 l3" was added -->
+          <!-- Grey navigation panel
+                This content will be:
+            3-columns-wide on large screens,
+            4-columns-wide on medium screens,
+            12-columns-wide on small screens  -->
         </div>
-        <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+        <div class="col s12 m8 l9"> <!-- Note that "m8 l9" was added -->
+            <!-- Modal Trigger -->
+      <button id="button1" data-target="modal1" class="btn modal-trigger">Delete Account</button>
+
+      <!-- Modal Structure -->
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+            <h4>Confirmation</h4>
+            <p>Are you sure you want to delete your account? This action cannot be undone and you will be unable to recover any data.</p>
+            </div>
+            <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Yes, delete it!</a>
+            </div>
         </div>
-    </div>
+          <!-- Teal page content
+                This content will be:
+            9-columns-wide on large screens,
+            8-columns-wide on medium screens,
+            12-columns-wide on small screens  -->
+        </div>
+      </div>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.js"></script>
